--- a/WslDockerTool.Net5/WslDockerTool.Net5.csproj
+++ b/WslDockerTool.Net5/WslDockerTool.Net5.csproj
@@ -11,6 +11,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="AutoMapper" Version="10.1.1" />
     <PackageReference Include="HandyControl" Version="3.2.0" />
     <PackageReference Include="Prism.DryIoc" Version="8.1.97" />
     <PackageReference Include="Prism.Wpf" Version="8.1.97" />
